Fixed #54: "Saved Enlarged Image As" shifts other menu items Always shows the menu item, and disables/enables it dynamically.

--- a/src/chrome/skin/all/overlay.css
+++ b/src/chrome/skin/all/overlay.css
@@ -115,3 +115,8 @@ toolbar[mode="icons"] #thumbnailzoomplus-toolbar-button {
   /* top, right, bottom, left */
   -moz-image-region: rect(0px, 15px, 15px, 0px);
 }
+#thumbnailzoomplus-context-download [disabled=true] {
+  list-style-image: url("chrome://thumbnailzoomplus/skin/images/icon16.png");
+  /* top, right, bottom, left */
+  -moz-image-region: rect(16px, 15px, 31px, 0px);
+}
